Outcommented webconfig for list filter in json, cause it made the old  service endpoints stop working Added imageBasePath and appPath global variables in Javascript when initializing Open eMap Admin WUI New version of Open eMap Admin WUI copied to staticcontent

--- a/src/org/oemap/services/modules/staticcontent/OpenEMap-Admin/debug_factory.html
+++ b/src/org/oemap/services/modules/staticcontent/OpenEMap-Admin/debug_factory.html
@@ -8,7 +8,7 @@
     <script>
     	// context path to OpenEMap-Admin-Services 
     	var appPath = '/openemapadmin';
-    	// Settings for 
+    	// Settings for servers 
         var defaultWMSServer = 'https://extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
         var wfsServer = 'https://extmaptest.sundsvall.se/geoserver/wfs';
         var wmsServer = 'https://extmaptest.sundsvall.se/geoserver/wms';
@@ -16,7 +16,6 @@
 		var wmsGetCapabilities = proxyUrl + defaultWMSServer; 
     </script>
     <script type="text/javascript" src="OpenEMapAdmin.js"></script>
-    </script>
 </head>
 <body>
     <div id="contentitem" style="width: 100%; height: 100%;"></div>
