--- a/src/org/oemap/services/modules/staticcontent/OpenEMap/examples/APT.html
+++ b/src/org/oemap/services/modules/staticcontent/OpenEMap/examples/APT.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Gruppaktivitet 2015-03-18 - Projekt & förvaltning</title>
+		<title>Gruppaktivitet 2015-03-18 - Projekt förvaltning</title>
 		<meta name="description" content="">
 		<meta name="author" content="Anders Erlandsson, Sundsvalls kommun" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
